--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -154,7 +154,8 @@
   <img
   class="picture-partial__item-img img-fluid figure-img {img_thumbnail} {image.referenceProperties.picture_border_radius}"
   loading="lazy"
-  {f:if(condition:options.height,then:' style=" max-height: {options.height}px;"')}
+  {f:if(condition:options.max_height,then:' style=" max-height: {options.max_height}px;"')}
+  {f:if(condition:options.height,then:' style=" height: {options.height}px;"')}
   src="{f:uri.image(image: image, maxWidth: '992', cropVariant: 'default')}" alt="{image.alternative}" title="{image.title}">
 </picture>
 
