[TASK] update quote CE

--- a/Resources/Private/Templates/ContentElements/Static/Quote.html
+++ b/Resources/Private/Templates/ContentElements/Static/Quote.html
@@ -9,34 +9,39 @@
 
   <div class="ce-quote__wrp">
     <blockquote class="ce-quote">
-      <div class="ce-quote__body">
-        <t3kit:contentEditable table="tt_content" field="bodytext" uid="{data.uid}">
-          <p class="ce-quote__body-p">{data.bodytext}</p>
-        </t3kit:contentEditable>
-        <span class="ce-quote__body-icon icons icon-t3-ce-quoteMark" aria-hidden="true"></span>
-      </div>
+
+      <f:if condition="{data.bodytext}">
+        <div class="ce-quote__bodytext">
+          <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
+        </div>
+      </f:if>
+
       <footer class="ce-quote__footer">
-        <f:if condition="{data.author_name}">
-          <span class="ce-quote__footer-name">{data.author_name}<f:render section="nameSuffix" arguments="{title: data.work_title, link: data.link}" /></span>
+
+        <f:if condition="{flexform.author_name}">
+          <span class="ce-quote__footer-author-name">
+            {flexform.author_name}
+          </span>
         </f:if>
-        <f:if condition="{data.work_title}">
-          <cite class="ce-quote__footer-title" title="{data.work_title}">{data.work_title}<f:render section="nameSuffix" arguments="{link: data.link}" />
+
+        <f:if condition="{flexform.job_title}">
+          <span class="ce-quote__footer-job-title">
+            {flexform.job_title}
+          </span>
         </f:if>
+
         <f:if condition="{data.link}">
-          <f:link.typolink parameter="{data.link}" class="ce-quote__footer-link">{data.link_title}</f:link.typolink>
+          <div class="ce-quote__footer-link">
+            <f:render partial="Link/Link" arguments="{_all}" />
+          </div>
         </f:if>
-        <f:if condition="{data.work_title}">
-          </cite>
-        </f:if>
+
       </footer>
+
     </blockquote>
   </div>
 
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Quote.html [end] -->
 </f:section>
-
-<!-- In one line to aviod an extra space before the comma sign-->
-<f:section name="nameSuffix"><f:if condition="{title}"><f:then>, </f:then><f:else><f:if condition="{link}"><f:then>, </f:then></f:if></f:else></f:if></f:section>
-<f:section name="titleSuffix"><f:if condition="{link}"><f:then>, </f:then></f:if></f:section>
 
 </html>
