--- a/Resources/Private/Templates/Page/2columnsSidenav.html
+++ b/Resources/Private/Templates/Page/2columnsSidenav.html
@@ -37,14 +37,42 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="2columns-sidenav">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="2columns-sidenav__top-content">
+      <div class="2columns-sidenav__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+    <section class="2columns-sidenav__before-content ">
+      <div class="2columns-sidenav__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="2columns-sidenav__content">
+      <div class="2columns-sidenav__content-container container">
+        <div class="row">
+          <div class="col-md-4">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
+          </div>
+          <div class="col-md-4">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+          </div>
+          <div class="col-md-4">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="2columns-sidenav__after-content">
+      <div class="2columns-sidenav__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
