--- a/Resources/Private/Templates/Page/3columnsSidenav.html
+++ b/Resources/Private/Templates/Page/3columnsSidenav.html
@@ -37,15 +37,45 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="3columns-sidenav">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="3columns-sidenav__top-content">
+      <div class="3columns-sidenav__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
+    <section class="3columns-sidenav__before-content ">
+      <div class="3columns-sidenav__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="3columns-sidenav__content">
+      <div class="3columns-sidenav__content-container container">
+        <div class="row">
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
+          </div>
+          <div class="col-md-3">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="3columns-sidenav__after-content">
+      <div class="3columns-sidenav__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
