--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -37,7 +37,19 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+  <main class="default">
+
+    <section class="default__content">
+      <div class="default__content-container container">
+        <div class="row">
+          <div class="col">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
