--- a/Resources/Private/Templates/Page/Empty.html
+++ b/Resources/Private/Templates/Page/Empty.html
@@ -35,7 +35,15 @@
 
 <f:section name="Main">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+  <main class="empty">
+
+    <section class="empty__content">
+      <div class="empty__content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1001}" />
+      </div>
+    </section>
+
+  </main>
 
 </f:section>
 
