--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -35,42 +35,32 @@
     # __________________________
   </f:comment>
 
-
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
   <main class="start-page">
 
     <section class="start-page__top-content">
-      <div class="start-page__top-content-container container-fluid">
-        <div class="row">
-          <div class="col-md p-0">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
-          </div>
-        </div>
+      <div class="start-page__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
       </div>
     </section>
 
     <section class="start-page__before-content">
-      <div class="start-page__before-content-container container">
-        <div class="row">
-          <div class="col-md">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
-          </div>
-        </div>
+      <div class="start-page__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
       </div>
     </section>
-
 
     <section class="start-page__content">
       <div class="start-page__content-container container">
         <div class="row">
-          <div class="col-md">
+          <div class="col-md-3">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
           </div>
-          <div class="col-md">
+          <div class="col-md-3">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
           </div>
-          <div class="col-md">
+          <div class="col-md-3">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
           </div>
         </div>
@@ -78,19 +68,14 @@
     </section>
 
     <section class="start-page__after-content">
-      <div class="start-page__after-content-container container">
-        <div class="row">
-          <div class="col-md">
-            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
-          </div>
-        </div>
+      <div class="start-page__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
       </div>
     </section>
 
   </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
-
 
 </f:section>
 
