--- a/Resources/Private/Templates/Page/2columns2550Sidenav25.html
+++ b/Resources/Private/Templates/Page/2columns2550Sidenav25.html
@@ -37,14 +37,42 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="2columns25-50-sidenav25">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="2columns25-50-sidenav25__top-content">
+      <div class="2columns25-50-sidenav25__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+    <section class="2columns25-50-sidenav25__before-content ">
+      <div class="2columns25-50-sidenav25__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="2columns25-50-sidenav25__content">
+      <div class="2columns25-50-sidenav25__content-container container">
+        <div class="row">
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+          </div>
+          <div class="col-md-6">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+          </div>
+          <div class="col-md-3">
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="2columns25-50-sidenav25__after-content">
+      <div class="2columns25-50-sidenav25__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
