--- a/Resources/Private/Templates/Page/2columns2575.html
+++ b/Resources/Private/Templates/Page/2columns2575.html
@@ -37,14 +37,40 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="2columns25-75">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="2columns25-75__top-content">
+      <div class="2columns25-75__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+    <section class="2columns25-75__before-content ">
+      <div class="2columns25-75__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="2columns25-75__content">
+      <div class="2columns25-75__content-container container">
+        <div class="row">
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+          </div>
+          <div class="col-md-9">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:7501}" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="2columns25-75__after-content">
+      <div class="2columns25-75__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
