--- a/Resources/Private/Templates/Page/4columns.html
+++ b/Resources/Private/Templates/Page/4columns.html
@@ -37,16 +37,46 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="4columns">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="4columns__top-content">
+      <div class="4columns__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2504}" />
+    <section class="4columns__before-content ">
+      <div class="4columns__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="4columns__content">
+      <div class="4columns__content-container container">
+        <div class="row">
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2501}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2503}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2504}" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="4columns__after-content">
+      <div class="4columns__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
