--- a/Resources/Private/Templates/Page/Sidenav252columns5025.html
+++ b/Resources/Private/Templates/Page/Sidenav252columns5025.html
@@ -37,14 +37,42 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="sidenav25-2columns50-25">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="sidenav25-2columns50-25__top-content">
+      <div class="sidenav25-2columns50-25__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+    <section class="sidenav25-2columns50-25__before-content ">
+      <div class="sidenav25-2columns50-25__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="sidenav25-2columns50-25__content">
+      <div class="sidenav25-2columns50-25__content-container container">
+        <div class="row">
+          <div class="col-md-3">
+          </div>
+          <div class="col-md-6">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:5001}" />
+          </div>
+          <div class="col-md-3">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:2502}" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="sidenav25-2columns50-25__after-content">
+      <div class="sidenav25-2columns50-25__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
