--- a/Resources/Private/Templates/Page/Sidenav2columns.html
+++ b/Resources/Private/Templates/Page/Sidenav2columns.html
@@ -37,14 +37,42 @@
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:1, slide:'-1'}" />
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+  <main class="sidenav-2columns">
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+    <section class="sidenav-2columns__top-content">
+      <div class="sidenav-2columns__top-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:50}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+    <section class="sidenav-2columns__before-content ">
+      <div class="sidenav-2columns__before-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:60}" />
+      </div>
+    </section>
 
-  <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+    <section class="sidenav-2columns__content">
+      <div class="sidenav-2columns__content-container container">
+        <div class="row">
+          <div class="col-md-4">
+          </div>
+          <div class="col-md-4">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
+          </div>
+          <div class="col-md-4">
+            <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="sidenav-2columns__after-content">
+      <div class="sidenav-2columns__after-content-container">
+        <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:90}" />
+      </div>
+    </section>
+
+  </main>
 
   <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:11, slide:'-1'}" />
 
