[TASK] implement bodytext as a partial

--- a/Resources/Private/Templates/ContentElements/Special/Html.html
+++ b/Resources/Private/Templates/ContentElements/Special/Html.html
@@ -6,7 +6,9 @@
 
 <f:section name="Main">
 
-  <f:format.raw>{data.bodytext}</f:format.raw>
+  <f:if condition="{data.bodytext}">
+    <f:render partial="Bodytext/RTEBodytext" arguments="{_all}" />
+  </f:if>
 
 </f:section>
 
