--- a/Resources/Private/Templates/ContentElements/Static/Text.html
+++ b/Resources/Private/Templates/ContentElements/Static/Text.html
@@ -5,9 +5,11 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Text.html [begin] -->
 
-  <div class="ce-bodytext__wrp">
-    <f:format.html>{data.bodytext}</f:format.html>
-  </div>
+  <f:if condition="{data.bodytext}">
+    <div class="ce-bodytext">
+      <f:render partial="Bodytext/RTEBodytext" arguments="{_all}" />
+    </div>
+  </f:if>
 
   <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Text.html [end] -->
 </f:section>
