--- a/theme/src/styles/main.scss
+++ b/theme/src/styles/main.scss
@@ -22,6 +22,7 @@
 // @use 'content-elements/social-icons';
 @use 'content-elements/textpic';
 @use 'content-elements/textmedia';
+@use 'content-elements/divider-icon';
 
 // ===== plugins =====
 // @use 'plugins/news/';
