--- a/Resources/Private/Partials/ContentElements/Media/Type/Audio.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Audio.html
@@ -1,7 +1,7 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" data-namespace-typo3-fluid="true">
 
 <div class="audio-partial">
-  <f:render partial="Media/Render/Audio" arguments="{data: data, file:file, options:options}" />
+  <f:render partial="Media/Render/Audio" arguments="{data: data, file:file}" />
 </div>
 
 </html>
