--- a/Resources/Private/Partials/ContentElements/Media/Figure.html
+++ b/Resources/Private/Partials/ContentElements/Media/Figure.html
@@ -16,7 +16,7 @@
 
   <figure class="figure-partial figure figure-{type -> f:format.case(mode: 'lower')}">
 
-    <f:render partial="Media/Type/{type}" arguments="{data: data, file:file, options:options}" optional="1"/>
+    <f:render partial="Media/Type/{type}" arguments="{data: data, file:file, height:height}" optional="1"/>
 
     <f:if condition="{file.description}">
       <figcaption class="figure-partial__caption figure-caption text-{file.referenceProperties.description_position}">
