--- a/Resources/Private/Templates/ContentElements/Static/HeroImage.html
+++ b/Resources/Private/Templates/ContentElements/Static/HeroImage.html
@@ -7,70 +7,69 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/HeroImage.html [begin] -->
 
-  <f:if condition="{files}">
 
-    <f:if condition="{flexform.height} == 0">
-      <f:then>
-        <f:variable name="options" value="{'max_height': 400}" />
-      </f:then>
-      <f:else>
-        <f:variable name="options" value="{'max_height': '{flexform.height}'}" />
-      </f:else>
-    </f:if>
+  <f:if condition="{flexform.height} == 0">
+    <f:then>
+      <f:variable name="height">400</f:variable>
+    </f:then>
+    <f:else>
+      <f:variable name="height">{flexform.height}</f:variable>
+    </f:else>
+  </f:if>
 
-    <f:if condition="{flexform.full_width_caption}">
-        <f:then>
-          <f:variable name="container" value="container-fluid" />
-        </f:then>
-        <f:else>
-          <f:variable name="container" value="container" />
-        </f:else>
-    </f:if>
+  <f:if condition="{data.section_container_width} == 'container'">
+    <f:variable name="container">container</f:variable>
+  </f:if>
 
-    <div class="ce-hero-image__wrp">
-      <div class="ce-hero-image js__ce-hero-image">
+  <div class="ce-hero-image__wrp {container}">
+    <div class="ce-hero-image {f:if(condition:'{flexform.transparentLayer} != 0', then: 'ce-hero-image__caption-wrp--overlay-{flexform.overlay}')}">
 
-        <div class="ce-hero-image__picture">
-          <f:render partial="Media/Type" arguments="{_all}" />
-        </div>
+      <div class="ce-hero-image__caption-wrp container ce-hero-image__caption-wrp--{flexform.caption_alignment}" {f:if(condition:height, then: 'style="min-height: {height}px;"')}>
+        <div class="ce-hero-image__caption">
 
-        <div class="ce-hero-image__caption-wrp {f:if(condition:'{flexform.transparentLayer} != 0', then: ' ce-hero-image__caption-wrp--overlay-{flexform.overlay}')}">
-          <div class="ce-hero-image__caption {container}">
-
+          <f:if condition="{data.header_text}">
             <div class="ce-hero-image__caption-header">
               <f:render partial="Header/HeaderText" arguments="{_all}" />
             </div>
+          </f:if>
 
+          <f:if condition="{data.subheader_text}">
             <div class="ce-hero-image__caption-subheader">
               <f:render partial="Header/SubHeaderText" arguments="{_all}" />
             </div>
+          </f:if>
 
-            <f:if condition="{data.bodytext}">
-              <div class="ce-hero-image__caption-bodytext">
-                <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
-              </div>
-            </f:if>
+          <f:if condition="{data.bodytext}">
+            <div class="ce-hero-image__caption-bodytext">
+              <f:render partial="Bodytext/Bodytext" arguments="{_all}" />
+            </div>
+          </f:if>
 
-            <f:if condition="{data.link_title}">
-              <div class="ce-hero-image__caption-link">
-                <f:if condition="{data.link_as_button}">
-                  <f:then>
-                    <f:render partial="Link/ButtonLink" arguments="{_all}" />
-                  </f:then>
-                  <f:else>
-                    <f:render partial="Link/Link" arguments="{_all}" />
-                  </f:else>
-                </f:if>
-              </div>
-            </f:if>
+          <f:if condition="{data.link}">
+            <div class="ce-hero-image__caption-link">
+              <f:if condition="{data.link_as_button}">
+                <f:then>
+                  <f:render partial="Link/ButtonLink" arguments="{_all}" />
+                </f:then>
+                <f:else>
+                  <f:render partial="Link/Link" arguments="{_all}" />
+                </f:else>
+              </f:if>
+            </div>
+          </f:if>
 
-          </div>
         </div>
-
-
       </div>
+
+
+      <f:if condition="{files}">
+        <div class="ce-hero-image__picture">
+          <f:render partial="Media/Type" arguments="{_all}" />
+        </div>
+      </f:if>
+
     </div>
-  </f:if>
+  </div>
 
   <!-- t3kit: Resources/Private/Templates/ContentElements/Static/HeroImage.html [end] -->
 </f:section>
