--- a/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/SubHeader.html
@@ -3,32 +3,32 @@
 <f:if condition="{subheader}">
   <f:switch expression="{layout}">
     <f:case value="0">
-      <h2 class="{positionClass}">
+      <h2 class="{position}">
         {subheader}
       </h2>
     </f:case>
     <f:case value="1">
-      <h3 class="{positionClass}">
+      <h3 class="{position}">
         {subheader}
       </h3>
     </f:case>
     <f:case value="2">
-      <h4 class="{positionClass}">
+      <h4 class="{position}">
         {subheader}
       </h4>
     </f:case>
     <f:case value="3">
-      <h5 class="{positionClass}">
+      <h5 class="{position}">
         {subheader}
       </h5>
     </f:case>
     <f:case value="4">
-      <h6 class="{positionClass}">
+      <h6 class="{position}">
         {subheader}
       </h6>
     </f:case>
     <f:case value="5">
-      <h6 class="{positionClass}">
+      <h6 class="{position}">
         <small>{subheader}</small>
       </h6>
     </f:case>
