--- a/Resources/Private/Partials/ContentElements/Header/All.html
+++ b/Resources/Private/Partials/ContentElements/Header/All.html
@@ -5,15 +5,15 @@
       <f:render partial="Header/Render/Header" arguments="{
         header: data.header,
         layout: data.header_layout,
-        positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
+        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}',
         link: data.header_link}" />
       <f:render partial="Header/Render/SubHeader" arguments="{
         subheader: data.subheader,
         layout: data.header_layout,
-        positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
+        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
       <f:render partial="Header/Render/Date" arguments="{
         date: data.date,
-        positionClass: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
+        position: '{f:if(condition: data.header_position, then: \'text-{data.header_position}\')}' }" />
   </f:if>
 </f:if>
 
