--- a/Resources/Private/Partials/ContentElements/Header/Render/Header.html
+++ b/Resources/Private/Partials/ContentElements/Header/Render/Header.html
@@ -3,32 +3,32 @@
 <f:if condition="{header}">
   <f:switch expression="{layout}">
     <f:case value="0">
-      <h1 class="{positionClass}">
+      <h1 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h1>
     </f:case>
     <f:case value="1">
-      <h2 class="{positionClass}">
+      <h2 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h2>
     </f:case>
     <f:case value="2">
-      <h3 class="{positionClass}">
+      <h3 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h3>
     </f:case>
     <f:case value="3">
-      <h4 class="{positionClass}">
+      <h4 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h4>
     </f:case>
     <f:case value="4">
-      <h5 class="{positionClass}">
+      <h5 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h5>
     </f:case>
     <f:case value="5">
-      <h6 class="{positionClass}">
+      <h6 class="{position}">
         <f:link.typolink parameter="{link}">{header}</f:link.typolink>
       </h6>
     </f:case>
