[TASK] update CE-s, change link_title condition to link

--- a/Resources/Private/Templates/ContentElements/Static/Button.html
+++ b/Resources/Private/Templates/ContentElements/Static/Button.html
@@ -7,7 +7,7 @@
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Button.html [begin] -->
 
-  <f:if condition="{data.link_title}">
+  <f:if condition="{data.link}">
     <div class="ce-button">
       <f:if condition="{data.link_as_button}">
         <f:then>
