--- a/Resources/Private/Templates/ContentElements/Static/BigIconTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/BigIconTextLink.html
@@ -39,7 +39,7 @@
       </f:if>
 
 
-      <f:if condition="{data.link_title}">
+      <f:if condition="{data.link}">
         <div class="ce-big-icon-text-link__link">
           <f:if condition="{data.link_as_button}">
             <f:then>
