--- a/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
+++ b/Resources/Private/Templates/ContentElements/Static/IconTextLink.html
@@ -34,7 +34,7 @@
         </div>
       </f:if>
 
-      <f:if condition="{data.link_title}">
+      <f:if condition="{data.link}">
         <div class="ce-icon-text-link__link">
           <f:if condition="{data.link_as_button}">
             <f:then>
