--- a/Resources/Private/Templates/Page/StartPage.html
+++ b/Resources/Private/Templates/Page/StartPage.html
@@ -54,13 +54,13 @@
     <section class="start-page__content">
       <div class="start-page__content-container container">
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-md">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3301}" />
           </div>
-          <div class="col-md-3">
+          <div class="col-md">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3302}" />
           </div>
-          <div class="col-md-3">
+          <div class="col-md">
             <f:cObject typoscriptObjectPath="lib.contentRender" data="{colPos:3303}" />
           </div>
         </div>
