[FEATURE] add image zoom lightbox plugin

--- a/Resources/Private/Partials/ContentElements/Media/Type.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type.html
@@ -10,7 +10,7 @@
       <f:render partial="Media/Type/Video" arguments="{data: data, file:file}"/>
     </f:case>
     <f:defaultCase>
-      <f:render partial="Media/Type/Picture" arguments="{data: data, file:file, height:height}"/>
+      <f:render partial="Media/Type/Picture" arguments="{data: data, file:file, height:height, width:width}"/>
     </f:defaultCase>
   </f:switch>
 
