--- a/Resources/Private/Partials/ContentElements/Media/Type/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Type/Picture.html
@@ -4,7 +4,7 @@
   <f:if condition="{file.link}">
     <f:then>
       <f:link.typolink class="picture-partial__link" parameter="{file.link}" title="{file.title}">
-        <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height}" />
+        <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height, width:width}" />
       </f:link.typolink>
     </f:then>
 
@@ -13,14 +13,19 @@
 
         <f:then>
           <div class="picture-partial__zoom">
-            <f:comment>TODO: add lightbox functionality</f:comment>
-            <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height}" />
+            <a href="{f:uri.image(image: file, maxWidth: '{data.image_zoom_width}')}"
+              title="{file.properties.title}"
+              data-caption="{file.properties.description}"
+              rel="picture-partial__zoom-{data.uid}"
+              class="picture-partial__zoom-link">
+              <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height, width:width}" />
+            </a>
           </div>
         </f:then>
 
         <f:else>
           <div class="picture-partial__simple">
-            <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height}" />
+            <f:render partial="Media/Render/Picture" arguments="{data: data, image:file, height:height, width:width}" />
           </div>
         </f:else>
 
