--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -25,6 +25,7 @@
 @use 'content-elements/divider-icon';
 
 // ===== plugins =====
+@use 'plugins/lightbox';
 // @use 'plugins/news/';
 // @use 'plugins/search';
 
