--- a/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
+++ b/Resources/Private/Partials/ContentElements/Media/Render/Picture.html
@@ -94,9 +94,17 @@
 <f:variable name="small_viewport_width">100</f:variable>
 
 <f:comment>
-  Calculate picture_width based on selector in BE to define relative image width inside a content element
+  Calculate picture_width based on selector or widht variable in BE to define relative image width inside a content element
 </f:comment>
-<f:if condition="{image.referenceProperties.picture_width} != 100">
+<f:if condition="{width}">
+  <f:then>
+    <f:variable name="picture_width">{width}</f:variable>
+  </f:then>
+  <f:else>
+    <f:variable name="picture_width">{image.referenceProperties.picture_width}</f:variable>
+  </f:else>
+</f:if>
+<f:if condition="{picture_width} != 100">
   <f:variable name="fluid_viewport_width">{image.referenceProperties.picture_width*fluid_viewport_width/100}</f:variable>
   <f:variable name="fixed_viewport_width">{image.referenceProperties.picture_width*fixed_viewport_width/100}</f:variable>
   <f:variable name="small_viewport_width">{image.referenceProperties.picture_width*small_viewport_width/100}</f:variable>
