--- a/Resources/Private/Templates/ContentElements/Static/Table.html
+++ b/Resources/Private/Templates/ContentElements/Static/Table.html
@@ -4,66 +4,73 @@
 
 <f:section name="Main">
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Table.html [begin] -->
-  <f:if condition="{table}">
-    <f:comment><!-- use tableClass, an array of classes to build into one string--></f:comment>
-    <f:if condition="{tableClass}">
-      <f:for each="{tableClass}" as="class" iteration="i">
-        <f:variable name="table_classes">{table_classes} {class}</f:variable>
-      </f:for>
-    </f:if>
 
-    <table class="ce-table table{f:if(condition: table_classes, then: '{table_classes}')}">
-      <f:if condition="{data.table_caption}">
-        <caption>{data.table_caption}</caption>
+  <f:if condition="{table}">
+
+    <div class="ce-table__wrp">
+
+      <f:comment><!-- use tableClass, an array of classes to build into one string--></f:comment>
+      <f:if condition="{tableClass}">
+        <f:for each="{tableClass}" as="class" iteration="i">
+          <f:variable name="table_classes">{table_classes} {class}</f:variable>
+        </f:for>
       </f:if>
-      <f:for each="{table}" as="row" iteration="rowIterator">
-        <f:if condition="{rowIterator.isFirst}">
-          <f:then>
-            <f:if condition="{data.table_header_position} == 1">
-              <f:then>
-                <thead>
-              </f:then>
-              <f:else>
-                <tbody>
-              </f:else>
-            </f:if>
-          </f:then>
-          <f:else>
-            <f:if condition="{rowIterator.isLast}">
-              <f:if condition="{data.table_tfoot}">
-                </tbody>
-                <tfoot>
-              </f:if>
-            </f:if>
-          </f:else>
+
+      <table class="ce-table table{f:if(condition: table_classes, then: '{table_classes}')}">
+        <f:if condition="{data.table_caption}">
+          <caption>{data.table_caption}</caption>
         </f:if>
-        <tr>
-          <f:for each="{row}" as="cell" iteration="columnIterator">
-            <f:render section="Columns" arguments="{_all}" />
-          </f:for>
-        </tr>
-        <f:if condition="{rowIterator.isFirst}">
-          <f:then>
-            <f:if condition="{data.table_header_position} == 1">
-              </thead>
-              <tbody>
-            </f:if>
-          </f:then>
-          <f:else>
-            <f:if condition="{rowIterator.isLast}">
-              <f:if condition="{data.table_tfoot}">
+        <f:for each="{table}" as="row" iteration="rowIterator">
+          <f:if condition="{rowIterator.isFirst}">
+            <f:then>
+              <f:if condition="{data.table_header_position} == 1">
                 <f:then>
-                  </tfoot>
+                  <thead>
                 </f:then>
                 <f:else>
-                  </tbody>
+                  <tbody>
                 </f:else>
               </f:if>
-            </f:if>
-          </f:else>
-        </f:if>
-      </f:for>
-    </table>
+            </f:then>
+            <f:else>
+              <f:if condition="{rowIterator.isLast}">
+                <f:if condition="{data.table_tfoot}">
+                  </tbody>
+                  <tfoot>
+                </f:if>
+              </f:if>
+            </f:else>
+          </f:if>
+          <tr>
+            <f:for each="{row}" as="cell" iteration="columnIterator">
+              <f:render section="Columns" arguments="{_all}" />
+            </f:for>
+          </tr>
+          <f:if condition="{rowIterator.isFirst}">
+            <f:then>
+              <f:if condition="{data.table_header_position} == 1">
+                </thead>
+                <tbody>
+              </f:if>
+            </f:then>
+            <f:else>
+              <f:if condition="{rowIterator.isLast}">
+                <f:if condition="{data.table_tfoot}">
+                  <f:then>
+                    </tfoot>
+                  </f:then>
+                  <f:else>
+                    </tbody>
+                  </f:else>
+                </f:if>
+              </f:if>
+            </f:else>
+          </f:if>
+        </f:for>
+      </table>
+
+    </div>
+
   </f:if>
 
 </f:section>
@@ -167,9 +174,8 @@
       </f:if>
     </f:else>
   </f:if>
+
 <!-- t3kit: Resources/Private/Templates/ContentElements/Static/Table.html [end] -->
 </f:section>
-
-
 
 </html>
