--- a/theme/src/scss/main.scss
+++ b/theme/src/scss/main.scss
@@ -5,32 +5,31 @@
 @use 'global';
 
 // ===== content-elements =====
-@use 'content-elements/header';
-@use 'content-elements/footer';
+// @use 'content-elements/header';
+// @use 'content-elements/footer';
 @use 'content-elements/big-icon-text-button';
 // @use 'content-elements/accordion';
 @use 'content-elements/contact-card';
-// @use 'content-elements/hero-image';
 @use 'content-elements/icon-text-button';
 @use 'content-elements/hero-image';
-// @use 'content-elements/icon-text-button';
-// @use 'content-elements/image-text-link';
-// @use 'content-elements/logo-carousel';
-// @use 'content-elements/parallax';
+// // @use 'content-elements/icon-text-button';
+// // @use 'content-elements/image-text-link';
+// // @use 'content-elements/logo-carousel';
+// // @use 'content-elements/parallax';
 @use 'content-elements/quote';
-// @use 'content-elements/slider';
-// @use 'content-elements/social-icons';
+// // @use 'content-elements/slider';
+// // @use 'content-elements/social-icons';
 @use 'content-elements/textpic';
 @use 'content-elements/textmedia';
 @use 'content-elements/divider-icon';
 
-// ===== plugins =====
+// // ===== plugins =====
 @use 'plugins/lightbox';
-// @use 'plugins/news/';
-// @use 'plugins/search';
+// // @use 'plugins/news/';
+// // @use 'plugins/search';
 
-// ===== helpers =====
-// @use 'helpers/content-margins';
+// // ===== helpers =====
+// // @use 'helpers/content-margins';
 @use 'helpers/figure-types';
 
 // ===== print =====
